# tada

./: .env.example  .gitattributes  .gitignore  README.md  llms-full.txt  package-lock.json  package.json  powernap-config.sample.json  pyproject.toml  record_bridge.py  run.sh  run_inference.py  run_offline.py  run_online.py  run_server.py  tada-config.defaults.json  tada-config.sample.json  test_sleepwalk.py  train_longnap.py  tsconfig.json  tsconfig.renderer.json  vite.config.ts
.github/workflows/: deploy-site.yml  release.yml
benchmark/: run_ttft.sh  ttft_cache_benchmark.py
bootstrap/: requirements.txt
docs/: updater-testing.md
electron/: package.json  tsconfig.json
electron/src/main/: index.ts  ipc.ts  recorder.ts
electron/src/preload/: preload.ts
electron/src/renderer/: index.html  overlay.html  powernap.d.ts
logs/: metrics.jsonl
migrations/: move_sessions.sh
scripts/: build_seeker_eval.py  convert_labels_to_parquet.py  delete_checkpoints.py  dev-supervisor.cjs  eval_seeker.py  eval_seeker_ppl.py  force-scheduled-service.cjs  notarize.cjs  start_offline.sh  start_offline_elbo.sh  start_online.sh  start_online_elbo.sh  test_compression.py  test_edge_refresh.py  test_labeler.py
shell/: start_offline.sh  start_online.sh
site/: index.html  package-lock.json  package.json  vite.config.ts
site/memex/: index.html
site/src/: App.css  App.tsx  main.tsx
site/src/demos/: index.ts  mail.tsx  overleaf.tsx  slack.tsx  types.ts
site/src/memex/: data.ts  driver.ts  memex.css  memex.tsx  timeline.ts
src/agent/: __main__.py  agent.py  builder.py
src/agent/tools/: __init__.py  background.py  base_tool.py  browser.py  compact.py  edit.py  mcp.py  profile.sb  read.py  skill.py  subagent.py  task_manager.py  terminal.py  terminal_readonly.py  todo.py  write.py
src/apps/chat/: routes.py  service.py
src/apps/common/: __init__.py  activity_streams.py  structured_completion.py  structured_ops.py
src/apps/memory/: ingest.py  lint.py  routes.py  service.py
src/apps/moments/: _incremental.py  cli_config.py  discover.py  discovery.py  execute.py  filter.py  moments.py  oneoffs.py  paths.py  routes.py  scheduler.py  state.py  style_template.html  tada.py  triggers.py  verify_refine.py
src/apps/seeker/: converse.py  routes.py  scheduler.py  seek.py
src/apps/tabracadabra/: README.md  llm.py  main.py  prediction_loop.py  tab_prompt.txt
src/chat/: __init__.py  agent.py  session.py
src/client/: package-lock.json  package.json  tsconfig.json  tsconfig.renderer.json  vite.config.ts
src/client/bootstrap/: requirements.txt
src/client/main/: api.ts  auth-config.ts  bootstrap.ts  connector-manager.ts  connector-permissions.ts  index.ts  ipc.ts  onboarding.ts  paths.ts  recorder.ts  sse.ts  supabase.ts  updater.ts  ws.ts
src/client/preload/: preload.ts
src/client/renderer/: App.tsx  featureFlags.ts  index.html  main.tsx  onboarding-main.tsx  onboarding.html  overlay-main.tsx  overlay.html  tada.d.ts  (+3 more)
src/connectors/: __init__.py  _http.py  _notify.py  _parent_watchdog.py  base.py  routes.py  service.py
src/retrievers/: __init__.py  base.py  bm25.py
src/server/: __main__.py  app.py  config.py  cost_tracker.py  feature_flags.py  services.py  state.py
src/user_models/: __init__.py  base.py  data_manager.py  inference.py  model_state.py  routes.py  training.py
tests/: test_memory_ingest.py  test_moments_pipeline.py
(+305 files in other folders)
