[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powernap"
version = "0.1.0"
description = "PowerNap training and retrieval utilities."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate",
    "datasets",
    "fastapi",
    "litellm==1.81.3",
    "numpy",
    "napsack",
    "pandas",
    "peft",
    "pillow",
    "python-dotenv",
    "python-multipart",
    "rich",
    "screeninfo",
    "tinker",
    "tinker-cookbook",
    "torch",
    "transformers",
    "trl",
    "uvicorn[standard]",
    "wandb",
    "mcp>=1.0.0",
    "watchdog",
    "websockets",
    "tenacity",
    "sandbox-runtime",
]

[tool.uv.sources]
tinker-cookbook = { git = "https://github.com/thinking-machines-lab/tinker-cookbook" }

[project.scripts]
powernap-server = "server.__main__:main"
powernap-bridge = "connectors.screen.napsack.bridge:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
