[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tada"
version = "0.1.0"
description = "Tada training and retrieval utilities."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate",
    "datasets",
    "fastapi",
    "litellm==1.82.6",
    "numpy",
    "napsack>=0.1.3",
    "pandas",
    "peft",
    "pillow",
    "python-dotenv",
    "python-multipart",
    "rich",
    "screeninfo",
    "tinker",
    "tinker-cookbook",
    "torch",
    "transformers",
    "trl",
    "uvicorn[standard]",
    "wandb",
    "mcp>=1.0.0",
    "watchdog",
    "websockets",
    "pynput>=1.7",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    "mss>=9.0",
    "tenacity",
    "sandbox-runtime",
    "playwright",
    "pycookiecheat",
]

[tool.uv.sources]
tinker-cookbook = { git = "https://github.com/thinking-machines-lab/tinker-cookbook" }

[project.scripts]
tada-server = "server.__main__:main"
tada-bridge = "connectors.screen.napsack.bridge:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
